--- a/rust_compute/Cargo.toml
+++ b/rust_compute/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustCompute"
+name = "rust_compute"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,5 +9,5 @@ version = "0.27.0"
 features = ["abi3-py38"]
 
 [lib]
-name = "rustCompute"
+name = "rust_compute"
 crate-type = ["cdylib"]
